Outsource instructions, just keep guiding questions

--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -15,31 +15,13 @@
         <h1>Collective Decision Making in Temnothorax Ant Colonies</h1>
     </header>
     <div id="instructions">
-        <h2> Instructions </h2>
-        <p>
-            In this simulator, you will be playing with a stripped down version of nest site selection in Temnothorax ant colonies.
-
-            As you learned in lecture, the first nest site to reach a critical density (known as a quorum) wins the competition. But how does an individual ant know if a quorum has been met?
-
-        <p>
-            <b>It is your job here to reverse engineer the rule that individual ants use in this simulation to sense quorum.</b>
-        </p>	
-            There are progress bars to the left and right of the arena that will increment every time an ant leaves the nest having sensed quorum. When the progress bar fills up, enough individual ants have sensed quorum that a consensus decision has been reached.
-
-            To aid in your understanding, a list of helpful questions is provided below.
-
-        </p>
-    <div id="questions">
-        <h2> Questions </h2>   
+        <h4> Guiding Questions </h4>   
         <OL>
         <li> When does an ant turn red? What causes it to change back to black? </li>
         <li> When does the progress bar for a given nest increase? Does it depend on the color?</li>
-        <li> Use your answers from questions 1-2 to determine the "rule" that is being used by individual ants to sense quorum. What is it? </li>  
-        <li> Given this rule, will the colony choose larger or smaller nests? What about larger or smaller aperture sizes? Why? </li>
-        <li> How might evolution "program" quorum-sensing behavior in order to select nests with a desirable geometry (i.e. radius, aperture)?  </li>
+        <li> Use your answers from questions 1-2 to try and determine the "rule" that is being used by individual ants to sense quorum. </li>  
         </OL>
         </p>
-    </div>
     </div>
     <div id="nest">
         <div class="nest-settings" id="nest-A-settings">
