--- a/modules/2-2d-cellular-automata/index.html
+++ b/modules/2-2d-cellular-automata/index.html
@@ -1,23 +1,24 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link href="src/style.css" type="text/css" rel="stylesheet">
     <title>2D Cellular Automata</title>
     <script type="application/javascript" src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
-    <h1>2D Cellular Automata</h1>
-    <div id="set">
-        size: <input type="number" min="1" max="256" name="CASize" value="16" onchange="caMap.setSize()" id="CASize"/>
+    <h1 class="center">2D Cellular Automata</h1>
+    <div id="set" class="center">
+        <p>size: <input class="input" type="number" min="1" max="256" name="CASize" value="16" onchange="caMap.setSize()" id="CASize"/></p>
     </div>
-    <div id="display">
+    <div id="display" class="center">
         <svg id="CA" width="500" height="500"></svg>
     </div>
-    <div id="control">
-        <input type="button" id="clear" value="Clear All" onclick="caMap.clean()">
-        <input type="button" id="initRand" value="Set random cells" onclick="caMap.setRandomCells()">
-        <input type="button" id="RunCAOnce" value="Step" onclick="caMap.clickstep()">
-        <input type="button" id="RunCA" value="Run" onclick="caMap.run(100)">
-        <input type="button" id="StopCA" value="Stop" onclick="caMap.stop()">
+    <div id="control" class="center">
+        <input class="input" type="button" id="clear" value="Clear All" onclick="caMap.clean()">
+        <input class="input" type="button" id="initRand" value="Set random cells" onclick="caMap.setRandomCells()">
+        <input class="input" type="button" id="RunCAOnce" value="Step" onclick="caMap.clickstep()">
+        <input class="input" type="button" id="RunCA" value="Run" onclick="caMap.run(100)">
+        <input class="input" type="button" id="StopCA" value="Stop" onclick="caMap.stop()">
     </div>
 </body>
 
