Italicize species name in title

--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Collective Decision Making in Temnothorax Ant Colonies</h1>
+        <h1>Collective Decision Making in <i>Temnothorax</i> Ant Colonies</h1>
     </header>
     <div id="instructions">
         <h4> Guiding Questions </h4>   
