Add Google Analytics tracking tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>WSS Modules</title>
     <link rel="stylesheet" href="styles/style.css" />
     <base href="https://elife-asu.github.io/wss-modules/">
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134762433-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-134762433-1');
+	</script>
+
 </head>
 <body>
     <header>
