--- a/modules/3-network-scaling/index.html
+++ b/modules/3-network-scaling/index.html
@@ -6,6 +6,17 @@
         <script type="application/javascript" src="https://d3js.org/d3.v3.min.js"></script>
         <script type="application/javascript" src="https://cdn.plot.ly/plotly-latest.min.js"></script> <script type="application/javascript" src="jsnetworkx.js"></script>
         <script type="application/javascript" src="simulator.js" defer></script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134762433-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-134762433-1');
+        </script>
+
     </head>
 
     <body>
