--- a/modules/1-1d-cellular-automata/index.html
+++ b/modules/1-1d-cellular-automata/index.html
@@ -4,6 +4,16 @@
     <link href="src/style.css" type="text/css" rel="stylesheet">
     <title>1D Elementary Cellular Automata</title>
     <script type="application/javascript" src="https://d3js.org/d3.v5.min.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134762433-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-134762433-1');
+    </script>
     
 </head>
 <body>
