--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="styles/main.css">
     <script type="application/javascript" src="https://d3js.org/d3.v5.min.js"></script>
     <script type="application/javascript" src="scripts/main.js" defer></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134762433-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-134762433-1');
+    </script>
+
 </head>
 <body>
     <header>
