--- a/modules/3-network-scaling/index.html
+++ b/modules/3-network-scaling/index.html
@@ -25,7 +25,7 @@
         </header>
         <div class="block block--centered">
             <h2 class="block__header">Instructions</h2>
-            <p class="block_par">You can construct two different types of graphs: Erd&ouml;s-R&eacute;nyi and Barab&aacute;si-Albert.  
+            <p class="block_par">You can construct two different types of graphs: Random and Scale-free.  
             Control the number of nodes, and the initial attachment parameters using the sliders. 
         	The density, mean degree, average shortest path, and degree distribution of the resulting graph will appear in the Properties section.</p>
         </div>
@@ -41,7 +41,7 @@
 
                     <div class="mechanism" id="erdos-renyi-mech">
                         <input type="radio" class="mechanism__radio" name="gen-mech" value="erdos-renyi" />
-                        <label for="erdos-renyi" class="mechanism__label">Erd&ouml;s-R&eacute;nyi</label>
+                        <label for="erdos-renyi" class="mechanism__label">Random</label>
                     </div>
 
                     <div class="parameter parameter--mechanism" id="erdos-renyi-param">
@@ -52,7 +52,7 @@
 
                     <div class="mechanism" id="barabasi-albert-mech">
                         <input type="radio" class="mechanism__radio" name="gen-mech" value="barabasi-albert" />
-                        <label for="barabasi-albert" class="mechanism__label">Barab&aacute;si-Albert</label>
+                        <label for="barabasi-albert" class="mechanism__label">Scale-free</label>
                     </div>
 
                     <div class="parameter parameter--mechanism" id="barabasi-albert-param">
