--- a/modules/2-2d-cellular-automata/index.html
+++ b/modules/2-2d-cellular-automata/index.html
@@ -17,10 +17,14 @@
 
 </head>
 <body>
-    <h1 class="center">Game of Life</h1>
+    <header>
+        <h1>Game of Life</h1>
+    </header>
+
+<!--     <h1 class="center">Game of Life</h1>
     <div id="set" class="center">
-        
-    </div>
+    </div> -->
+    
     <div id="whatIsGameofLife">
         <h2>Can we simulate life?</h2>
         <p>Can we simulate life? Or something that looks like life?</p>
@@ -58,6 +62,9 @@
                     system for one step, and "run" will do it repeatedly.</p>
         </div> 
     </div>
+<!--     <footer>
+        Copyright © 2018, <a href="https://emergence.asu.edu">Emergence@ASU</a>
+    </footer> -->
 </body>
 
 <script type="application/javascript" src="src/functions.js"></script>
