Color header and add footer

--- a/modules/2-2d-cellular-automata/index.html
+++ b/modules/2-2d-cellular-automata/index.html
@@ -62,9 +62,9 @@
                     system for one step, and "run" will do it repeatedly.</p>
         </div> 
     </div>
-<!--     <footer>
+    <footer>
         Copyright © 2018, <a href="https://emergence.asu.edu">Emergence@ASU</a>
-    </footer> -->
+    </footer>
 </body>
 
 <script type="application/javascript" src="src/functions.js"></script>
