--- a/modules/1-1d-cellular-automata/index.html
+++ b/modules/1-1d-cellular-automata/index.html
@@ -22,7 +22,7 @@
     </header>
     <div id="introduction">
         <p>
-            This 1-Dimensional Elementary Cellular Automata (1D ECA) is a Cellular Automata (CA) where the current state is only one dimension and where each cell is either black or white. The next state is determined by the state of the cell above and it’s neighbors as dictated by the rules. The neighborhood usually includes the adjacent cells but could include other faraway cells. There are numerous sets of rules that dictate the next state. The example here models one set of rules. How many rule variations are possible?
+            This 1-Dimensional Elementary Cellular Automata (1D ECA) is a Cellular Automata (CA) where the current state is only one dimension and where each cell is either black or white. The next state is determined by the state of the cell above and its neighbors as dictated by the rules. The neighborhood usually includes the adjacent cells but could include other faraway cells. There are numerous sets of rules that dictate the next state. The example here models one set of rules. How many rule variations are possible?
 <!--         <h4>To engage the simulator: </h4>   
         <OL>
         <li>Select the rule number. </li>
