--- a/modules/1-1d-cellular-automata/index.html
+++ b/modules/1-1d-cellular-automata/index.html
@@ -78,15 +78,20 @@
             </div>
         </div>
         <div style=" margin-left:520px;">
-            <h3>Introduction to The Simulator</h3>
+            <h3>Introduction to the 1D ECA Simulator</h3>
             <p>
                 To engage the simulator:
                 <OL>
-                <li>Select the rule number. </li>
-                <li>Click either Step, Run (in conjunction with Stop) or Run to End. Run to End will give you all evaluations. Step allows you to see the next row. </li>
-                <li>After the CA is complete, click Clear to start over.</li>  
-                <li>You can set the initial list to Single Cell or Random Cell.</li>  
-                <li>You can alter the ECA rule by clicking rule configuration on the above or setting the rule number.</li>  
+            	<li>Click either Run (in conjunction with Stop), Step or Run to End. Run will allow you to start the simulation with the option to Stop it. Run to End will give you all evaluations. Step allows you to see the next row. </li>
+            	<li>After the CA is complete, click Clear to start over. </li>
+            	</OL>
+        	</p>
+        	<p>
+            	To explore:
+            	<OL>
+            	<li>You can explore setting the initial list to Single Cell or Random Cell. Single Cell only starts with one black cell whereas Random Cell creates a random first state.</li>
+            	<li>You can alter the CA rule to see how different sets of rules affect the outcome. Change the CA rule one by one and see how the rules change.</li>
+            	<li>You change the Size of the ECA and see how bigger or smaller ECAs will allow you to see different patterns.</li>
                 </OL>
             </p>
 <!--             <p>We have a simulator on the left. You can click Run/Stop can run the CA. "Run to End" will give you all evaluations. You can
